testsuite/tests/arrows/gadt/ArrowGADTKappa.stderr

ArrowGADTKappa.hs:17:26: error:
    • Proc patterns cannot use existential or GADT data constructors
    • In the pattern: MkG g
      In an arrow kappa abstraction: (MkG g) -> show -< g
      In the command: (id -< x) `handleG` (MkG g) -> show -< g
